# homeguard

./: .gitignore  DEVLOG.md  DOCUMENTATION.md  README.md  kiro-guide.md  pyproject.toml
.agents/plans/: llm-agent-system.md  network-device-discovery.md  port-scanner.md  textual-tui-dashboard.md
.kiro/agents/: README-security-innovator.md  bugfix.json  cli-ui.json  devlog.json  iot-security-dev.json  prompt-analyzer.json  refactor.json  security-innovator.json
.kiro/documentation/: cli.md  docs_cli.md  docs_cli_authentication.md  docs_cli_autocomplete.md  docs_cli_billing.md  docs_cli_billing_contact-support.md  docs_cli_billing_managing-taxes.md  docs_cli_billing_related-questions.md  docs_cli_billing_subscription-portal.md  docs_cli_chat.md  docs_cli_chat_configuration.md  docs_cli_chat_context.md  docs_cli_chat_git-aware-selection.md  docs_cli_chat_images.md  docs_cli_chat_manage-prompts.md  docs_cli_chat_model-selection.md  docs_cli_chat_permissions.md  docs_cli_chat_planning-agent.md  docs_cli_chat_responding.md  docs_cli_chat_security.md  (+45 more)
api/: .env.example  docker-compose.yml  main.py  requirements.txt
docs/: BUG_FIXING_WORKFLOW.md  CODE_QUALITY_REPORT.md  DEVICE_IDENTIFICATION_IMPROVEMENTS.md  DEVICE_IDENTIFICATION_SESSION2.md  ENHANCED_DEVICE_IDENTIFICATION.md  IMPROVEMENTS.md  INTEGRATION_STATUS.md  MONITORING_ARCHITECTURE.md  MONITORING_FEATURE.md  MONITORING_IMPLEMENTATION_SUMMARY.md  QUICK_FIX_IMPLEMENTATION.md  REFACTORING_ANALYSIS.md  REFACTORING_COMPLETE.md  REMEDIATION_UI_PROPOSAL.md  UI_INTEGRATION_GUIDE.md
examples/: DEVLOG.md  README.md
(+70 files in other folders)
