[project]
name = "homeguard"
version = "0.1.0"
description = "Network security assessment CLI"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "litellm>=1.0.0",
    "pyyaml>=6.0",
    "textual>=0.40.0",
    "apscheduler>=3.10.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
full = ["scapy>=2.5.0"]
dev = ["pytest>=7.0.0", "black", "ruff"]

[project.scripts]
homeguard = "homeguard.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
